fix(modal): adding overflow-wrap and break word properties for longer text (#555)

--- a/packages/crayons-core/src/components/toast-message/toast-message.scss
+++ b/packages/crayons-core/src/components/toast-message/toast-message.scss
@@ -25,8 +25,8 @@
   box-shadow: 0px 2px 4px rgba(18, 52, 77, 0.06),
     0px 2px 16px rgba(18, 52, 77, 0.16);
 
-  overflow-wrap: break-word;
-  word-break: break-all;
+  overflow-wrap: anywhere;
+  word-break: break-word;
   white-space: normal;
 
   &.success {
